--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\halechr\\.conda\\envs\\mnePyQtFix\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\Py3PyQt5\\python.exe"
 }
