--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/pho/opt/anaconda3/envs/Py3Qt5/bin/python"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\Py3PyQt5\\python.exe"
 }
