--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 PyQt5==5.4.1
 QtAwesome==0.1.8
+
+# Requires ffprobe binary installed in C:\Common\bin\ffmpeg\bin\ffprobe. Obtainable from https://ffmpeg.zeranoe.com/builds/
