--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ GUI/UI/__pycache__
 **/__pycache__
 **/.DS_Store
 BehavioralBoxDatabase.db
+BehavioralBoxDatabase - VideoFiles -11-20-2019 1105am All.db
+BehavioralBoxDatabase - VideoFiles - 11-20-2019 11am.db
