--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ GUI/UI/__pycache__
 BehavioralBoxDatabase.db
 BehavioralBoxDatabase - VideoFiles -11-20-2019 1105am All.db
 BehavioralBoxDatabase - VideoFiles - 11-20-2019 11am.db
+BehavioralBoxDatabase - Copy.db
+BehavioralBoxDatabase - PartitionTesting - 11-27-2019.db
