--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ BehavioralBoxDatabase - VideoFiles -11-20-2019 1105am All.db
 BehavioralBoxDatabase - VideoFiles - 11-20-2019 11am.db
 BehavioralBoxDatabase - Copy.db
 BehavioralBoxDatabase - PartitionTesting - 11-27-2019.db
+BehavioralBoxDatabase - rMBP Backup 11-27-2019 4pm.db
