Added the QML resource file, but not the raw icons

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ BehavioralBoxDatabase - VideoFiles - 11-20-2019 11am.db
 BehavioralBoxDatabase - Copy.db
 BehavioralBoxDatabase - PartitionTesting - 11-27-2019.db
 BehavioralBoxDatabase - rMBP Backup 11-27-2019 4pm.db
+data/*
