Ignored Git Patches

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ BehavioralBoxDatabase - Copy.db
 BehavioralBoxDatabase - PartitionTesting - 11-27-2019.db
 BehavioralBoxDatabase - rMBP Backup 11-27-2019 4pm.db
 data/*
+Git Patches
