--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ BehavioralBoxDatabase - PartitionTesting - 11-27-2019.db
 BehavioralBoxDatabase - rMBP Backup 11-27-2019 4pm.db
 data/*
 Git Patches
+.vscode/.ropeproject
