Added "thumbnail.py" in the "lib/" folder that generates a "contact sheet" like series of thumbnails for any given video file.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ PyQt5==5.4.1
 QtAwesome==0.1.8
 orange-canvas-core==0.1.9
 # Requires ffprobe binary installed in C:\Common\bin\ffmpeg\bin\ffprobe. Obtainable from https://ffmpeg.zeranoe.com/builds/
+#conda install pillow
+pillow==6.2.1
+#conda install av -c conda-forge
+av==6.2.0
+ffmpeg==4.1.3
