--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ pillow==6.2.1
 #conda install av -c conda-forge
 av==6.2.0
 ffmpeg==4.1.3
+# conda install pyqtgraph
+pyqtgraph==0.10.0
+# conda install qtawesome
+
+# conda install qtmodern
+qtmodern==0.1.4
