Moved around requirements files

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Git Patches
 .ipynb_checkpoints
 EXTERNAL/Databases/BehavioralBoxDatabase_Paul.db
 EXTERNAL/Dependencies
+TestVideoPlayerWindowSeparately.py
