--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ Git Patches
 EXTERNAL/Databases/BehavioralBoxDatabase_Paul.db
 EXTERNAL/Dependencies
 TestVideoPlayerWindowSeparately.py
+EXTERNAL/Databases/Old
+dist
+build
