--- a/data/config.ini
+++ b/data/config.ini
@@ -1,8 +1,8 @@
 [DEFAULT]
 # ProjectDirectory = C:/Users/halechr/repo/PhoPyQtTimelinePlotter/
 # ProjectDirectory = /Users/pho/repo/PhoPyQtTimelinePlotter/
-ProjectDirectory = C:\Users\Administrator\repo\PhoPyQtTimelinePlotter
-# ProjectDirectory = 
+# ProjectDirectory = C:\Users\Administrator\repo\PhoPyQtTimelinePlotter
+ProjectDirectory = 
 FFMPEGPath = EXTERNAL/Dependencies/ffmpeg/bin
 CompressionLevel = 9
 ForwardX11 = yes
