--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 PyQt5==5.4.1
 QtAwesome==0.1.8
 orange-canvas-core==0.1.9
-# Requires ffprobe binary installed in C:\Common\bin\ffmpeg\bin\ffprobe. Obtainable from https://ffmpeg.zeranoe.com/builds/
+# Requires ffprobe binary installed in C:\Common\bin\ffmpeg\bin\ffprobe. Obtainable from https://www.gyan.dev/ffmpeg/builds/
 #conda install pillow
 pillow==6.2.1
 #conda install av -c conda-forge
@@ -17,7 +17,7 @@ qtmodern==0.1.4
 
 
 # Building
-fbs PyQt5 PyInstaller==3.4
+# fbs PyQt5 PyInstaller==3.4
 
 
 ## Exporting and importing:
