--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"python.pythonPath": "c:\\Users\\Pho\\anaconda3\\envs\\PyQt6\\python.exe"
+	"python.pythonPath": "/Users/pho/opt/anaconda3/envs/labjackPy3/bin/python"
 }
