added some screenshots

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"python.pythonPath": "/Users/pho/opt/anaconda3/envs/labjackPy3/bin/python"
+	"python.pythonPath": "C:\\Users\\pho\\miniconda3\\envs\\phoviz_ultimate\\python.exe"
 }
