--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,54 @@
-*/__pycache__
-GUI/Model/__pycache__
-GUI/TimelineTrackWidgets/__pycache__
-GUI/UI/__pycache__
-**/__pycache__
-**/.DS_Store
-BehavioralBoxDatabase.db
-BehavioralBoxDatabase - VideoFiles -11-20-2019 1105am All.db
-BehavioralBoxDatabase - VideoFiles - 11-20-2019 11am.db
-BehavioralBoxDatabase - Copy.db
-BehavioralBoxDatabase - PartitionTesting - 11-27-2019.db
-BehavioralBoxDatabase - rMBP Backup 11-27-2019 4pm.db
-data/*
-Git Patches
-.vscode/.ropeproject
-**.idea/**
-.ipynb_checkpoints
-EXTERNAL/Databases/BehavioralBoxDatabase_Paul.db
-EXTERNAL/Dependencies
-TestVideoPlayerWindowSeparately.py
-EXTERNAL/Databases/Old
-dist
-build
-**/.spyproject
-EXTERNAL/DOCS/GENERATED
-EXTERNAL/DOCS/Pre-Combined
+# Temporary and binary files
+*~
+*.py[cod]
+*.so
+*.cfg
+!.isort.cfg
+!setup.cfg
+*.orig
+*.log
+*.pot
+__pycache__/*
+.cache/*
+.*.swp
+*/.ipynb_checkpoints/*
+.DS_Store
+
+# Project files
+.ropeproject
+.project
+.pydevproject
+.settings
+.idea
+.vscode
+tags
+
+# Package files
+*.egg
+*.eggs/
+.installed.cfg
+*.egg-info
+
+# Unittest and coverage
+htmlcov/*
+.coverage
+.coverage.*
+.tox
+junit*.xml
+coverage.xml
+.pytest_cache/
+
+# Build and docs folder/files
+build/*
+dist/*
+sdist/*
+docs/api/*
+docs/_rst/*
+docs/_build/*
+cover/*
+MANIFEST
+
+# Per-project virtualenvs
+.venv*/
+.conda*/
+.python-version
