--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,17 +5,17 @@ repos:
   rev: v4.3.0
   hooks:
   - id: trailing-whitespace
-  - id: check-added-large-files
-  - id: check-ast
-  - id: check-json
-  - id: check-merge-conflict
-  - id: check-xml
-  - id: check-yaml
-  - id: debug-statements
-  - id: end-of-file-fixer
-  - id: requirements-txt-fixer
-  - id: mixed-line-ending
-    args: ['--fix=auto']  # replace 'auto' with 'lf' to enforce Linux/Mac line endings or 'crlf' for Windows
+  # - id: check-added-large-files
+  # - id: check-ast
+  # - id: check-json
+  # - id: check-merge-conflict
+  # - id: check-xml
+  # - id: check-yaml
+  # - id: debug-statements
+  # - id: end-of-file-fixer
+  # - id: requirements-txt-fixer
+  # - id: mixed-line-ending
+    # args: ['--fix=auto']  # replace 'auto' with 'lf' to enforce Linux/Mac line endings or 'crlf' for Windows
 
 ## If you want to avoid flake8 errors due to unused vars or imports:
 # - repo: https://github.com/myint/autoflake
