--- a/setup.cfg
+++ b/setup.cfg
@@ -115,6 +115,7 @@ exclude =
     dist
     .eggs
     docs/conf.py
+    src
 
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
