--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
 		"activityBar.background": "#0C2F4D",
 		"titleBar.activeBackground": "#10426B",
 		"titleBar.activeForeground": "#F9FCFE"
-	}
+	},
+	"python.formatting.provider": "none"
 }
